socket.io events challenge

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,12 @@
 </head>
 <body>
     Chat app
-    <button id="increment"> +1</button>
+
+    <form id="message-form">
+        <input  placeholder="Message" type="text" name="message">
+        <input type="submit" value="Send">
+    </form>
+
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/chat.js"></script>
 </body>
