--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
         <input  placeholder="Message" type="text" name="message">
         <input type="submit" value="Send">
     </form>
+    <button id="send-location">Send location</button>
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/chat.js"></script>
