--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,13 @@
 
     <script id="message-template" type="text/html">
         <div>
-            <p>{{message}}</p>
+            <p>{{createdAt}} - {{message}}</p>
+        </div>
+    </script>
+
+    <script id="location-template" type="text/html">
+        <div>
+            <p><a href="{{location}}" target="_blank"> This is my location</a></p>
         </div>
     </script>
 
