--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
 
     <script id="location-template" type="text/html">
         <div>
-            <p><a href="{{location}}" target="_blank"> This is my location</a></p>
+            <p>{{createdAt}} - <a href="{{location}}" target="_blank"> This is my location</a></p>
         </div>
     </script>
 
