--- a/public/index.html
+++ b/public/index.html
@@ -2,31 +2,49 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Chat App</title>
+    <link rel="stylesheet" href="./css/styles.min.css">
+    <link rel="icon" href="./img/favicon.png">
 </head>
 <body>
-    Chat app
+    <div class="chat">
+        <div class="chat__sidebar">
 
-    <div id="messages"></div>
+        </div>
+        <div class="chat__main">
+            <div id="messages" class="chat__messages"></div>
 
-    <form id="message-form">
-        <input  placeholder="Message" type="text" name="message" id="message">
-        <input type="submit" value="Send" id="submitButton">
-    </form>
-    <button id="send-location">Send location</button>
+            <div class="compose">
+                <form id="message-form">
+                <input  placeholder="Message" type="text" name="message" id="message">
+                <button id="submitButton">Send</button>
+                </form>
+                <button id="send-location">Send location</button>
+            </div>
 
+            
+        </div>
+    </div>
+    
     <script id="message-template" type="text/html">
-        <div>
-            <p>{{createdAt}} - {{message}}</p>
+        <div class="message">
+            <p>
+                <span class="message__name">Some User name</span>
+                <span class="message__meta">{{createdAt}}</span>
+            </p>
+            <p>{{message}}</p>
         </div>
     </script>
 
     <script id="location-template" type="text/html">
-        <div>
-            <p>{{createdAt}} - <a href="{{location}}" target="_blank"> This is my location</a></p>
+        <div class="message">
+            <p>
+                <span class="message__name">Some User name</span>
+                <span class="message__meta">{{createdAt}}</span>
+            </p>
+            <p><a href="{{location}}" target="_blank"> This is my location</a></p>
         </div>
     </script>
-
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
