--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     <script id="message-template" type="text/html">
         <div class="message">
             <p>
-                <span class="message__name">Some User name</span>
+                <span class="message__name">Daniel</span>
                 <span class="message__meta">{{createdAt}}</span>
             </p>
             <p>{{message}}</p>
@@ -39,7 +39,7 @@
     <script id="location-template" type="text/html">
         <div class="message">
             <p>
-                <span class="message__name">Some User name</span>
+                <span class="message__name">Daniele</span>
                 <span class="message__meta">{{createdAt}}</span>
             </p>
             <p><a href="{{location}}" target="_blank"> This is my location</a></p>
