--- a/public/chat.html
+++ b/public/chat.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="chat">
-        <div class="chat__sidebar">
+        <div id="sidebar" class="chat__sidebar">
 
         </div>
         <div class="chat__main">
@@ -25,6 +25,16 @@
             
         </div>
     </div>
+
+    <script id="sidebar-template" type="text/html">
+        <h2 class="room-title">{{room}}</h2>
+        <h3 class="list-title">Users:</h3>
+        <ul class="users">
+            {{#users}}
+                <li>{{originalUsername}}</li>
+            {{/users}}
+        </ul>
+    </script>
     
     <script id="message-template" type="text/html">
         <div class="message">
